# bank-statements-parsing

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json
.agents/skills/bugfix-regression/: SKILL.md
.agents/skills/docs-sync/: SKILL.md
.agents/skills/feature-slice/: SKILL.md
.agents/skills/git-commit/: SKILL.md
.codex/: config.toml
bank_statements_parsing/: __init__.py  cli.py  hashing.py  models.py  runner.py  state.py
docs/: STATUS.md  WORKPLAN.md  build-pipeline.md  development.md
docs/architecture/: ARCHITECTURE.md  PRODUCTION_INGESTION_DRAFT.md
docs/changes/active/production-ingestion-architecture/: plan.md  status-model.md  status.md
docs/changes/active/zip-source-units/: acceptance.md  brief.md  plan.md  status.md
docs/operations/: runbook.md
docs/quality/: code-review.md  test-strategy.md
docs/reference/: dataset-classification-stats.md
scripts/: check_docs_consistency.py  check_repo_hygiene.py
tests/: test_cli_integration.py  test_hashing.py  test_state.py
