[project]
name = "bank-statements-parsing"
version = "0.1.0"
description = "Python MVP for duplicate control of bank statement files"
requires-python = ">=3.11"

[dependency-groups]
dev = [
  "pytest",
  "coverage[toml]",
  "ruff",
  "pyright",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.coverage.run]
branch = true
source = ["bank_statements_parsing"]

[tool.coverage.report]
show_missing = true
